src/objects/Einstein_API_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Registered_Email__c</fullName>
        <label>Registered Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sentiment_Endpoint__c</fullName>
        <label>Sentiment Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sentiment_Model_Id__c</fullName>
        <label>Sentiment Model Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Endpoint__c</fullName>
        <label>Token Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Token_Expiration_Seconds__c</fullName>
        <label>Token Expiration Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Einstein API Settings</label>
</CustomObject>